trunk/Archive2/59/23d88e6e064f07/output
main.cpp: In constructor 'Rectangle::Rectangle(int, int)':
main.cpp:23:13: error: statement has no effect [-Werror=unused-value]
     itsWidth;
             ^
main.cpp:24:14: error: statement has no effect [-Werror=unused-value]
     itsHeight;
              ^
main.cpp: At global scope:
main.cpp:21:26: error: unused parameter 'width' [-Werror=unused-parameter]
 Rectangle::Rectangle(int width, int height)
                          ^
main.cpp:21:37: error: unused parameter 'height' [-Werror=unused-parameter]
 Rectangle::Rectangle(int width, int height)
                                     ^
main.cpp: In function 'int main()':
main.cpp:59:19: error: 'system' was not declared in this scope
     system("pause");
                   ^
cc1plus: all warnings being treated as errors
